fix navbar on mobile

--- a/thirtysevenjobs/static/style.scss
+++ b/thirtysevenjobs/static/style.scss
@@ -3,6 +3,11 @@
 @import 'bootswatch';
 @import 'font-awesome';
 @import 'utility-classes';
+@media (max-width: 778px) {
+  .nav.navbar-nav.pull-right {
+    float: none !important;
+  }
+}
 //custom styles
 .navbar {
     border-radius: 0px;
